--- a/quizStyles.css
+++ b/quizStyles.css
@@ -68,13 +68,11 @@ h2
 	margin: 0 auto;
 	margin-top: 20px;
 	height: 800px;
-	//text-align: center;
 }
 
 .quizBlock img
 {
 	position: absolute;
-	//cursor: pointer;
 	transition: left 0.5s ease, top 0.5s ease, transform 0.5s ease;
 	transform-origin: center center;
 }
@@ -107,7 +105,7 @@ h2
 
 .contact
 {
-	margin: 20 auto;
+	margin: 20px auto;
 	padding: 15px;
 	border-radius: 10px;
 	text-align: center;
